added new files

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@ body{
     background-color: blue;
 }
 .whattheydo{
-    background-color: blueviolet;
+    background-color: yellow;
 }
 .goodthingsaboutboys{
     background-color: chartreuse;
